fix broken styles for screen size

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,3 @@
-input [name=result] {
-  width: 250px;
-  padding: 3px;
-  margin: 5px;
-}
-
 form input {
   width: 78.5px;
   height: 45px;
@@ -12,3 +6,8 @@ form input {
   margin: 4px
 }
 
+#result {
+  width: 250px;
+  padding: 3px;
+  margin: 5px;
+}
